--- a/Caiman_Code-main/runCaimanPipelineScript.ipynb
+++ b/Caiman_Code-main/runCaimanPipelineScript.ipynb
@@ -19,9 +19,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-16 15:52:31.265735: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of movies to process:  [['/home/howelab/Desktop/testData/test071624/ConcatenatedMovie_MC_CROP.tif']]\n",
+      "Defining parameters...\n",
+      "Starting CNMF...\n",
+      "Starting component evaluation....\n",
+      "USING MODEL (keras API): /home/howelab/caiman_data/model/cnn_model.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-16 15:54:49.066544: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20/20 [==============================] - 0s 5ms/step\n",
+      "CNMF Finished, saving images...\n",
+      "Time taken:3.1333333333333333\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  1.60it/s]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.18s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.19s/it]\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.22s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.25s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.26s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.30s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.29s/it]\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.35s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.34s/it]\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.36s/it]\n",
+      "\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.41s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.43s/it]\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.44s/it]\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.52s/it]\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.56s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.47s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.02s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.16s/it]\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.15s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.26s/it]\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.24s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.24s/it]\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.34s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.37s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.39s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.40s/it]\n",
+      "\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.57s/it]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s].60s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.77s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.77s/it]\n",
+      "\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.77s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.32s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.22s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.44it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.67it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.71it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.37it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.42it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.30it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.28it/s]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.09s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.42it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.04it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.09it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.18it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.00it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.05it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "#Importing functions from other files for use in this script\n",
     "#Note that these files must be in the same directory as your script in order to import them like this\n",
@@ -39,7 +162,7 @@
     "# movieList = findMovs([r\"G:\\TdTG7_18_025\", r\"G:\\TdTG7_18_026\", r\"G:\\TdTG7_18_027\"], 'mc_reg.tif') #-> This will return the list in the proper format, don't worry about\n",
     "#formatting into a list inside a list\n",
     "\n",
-    "movieList = [\"/home/howelab/Desktop/testData/TdTG7_7_019_001_ch1_MC_reg.tif\"]\n",
+    "movieList = [\"/home/howelab/Desktop/testData/test071624/ConcatenatedMovie_MC_CROP.tif\"]\n",
     "\n",
     "\n",
     "#Note that the internal caiman functions wants a list for each movie that you want to run. Therefore when you assemble your list make sure they are lists INSIDE of lists.\n",
