--- a/Caiman_Code_main/runCaimanPipelineScript_lily.ipynb
+++ b/Caiman_Code_main/runCaimanPipelineScript_lily.ipynb
@@ -18,130 +18,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To share drive onto linux computer depending on which computer you are on the command line is:\n",
+    "sudo bash\n",
+    "mount -t cifs -o username=howelab,uid=1000,gid=1000,forceuid,forcegid //RKC-HOW-WD-0015.ad.bu.edu/LilyDrive/exp_2ptrack_2024/ /mnt/lily_shared\n",
+    "\n",
+    "OR \n",
+    "sudo bash\n",
+    "mount -t cifs -o username=howelab,uid=1002,gid=1002,forceuid,forcegid //RKC-HOW-WD-0015.ad.bu.edu/LilyDrive/exp_2ptrack_2024/ /mnt/lily_shared"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-16 15:52:31.265735: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of movies to process:  [['/home/howelab/Desktop/testData/test071624/ConcatenatedMovie_MC_CROP.tif']]\n",
+      "List of movies to process:  [['/mnt/lily_shared/tdt_011/250201/2w_rec001/ConcatenatedMovie_MC.tif']]\n",
       "Defining parameters...\n",
       "Starting CNMF...\n",
       "Starting component evaluation....\n",
-      "USING MODEL (keras API): /home/howelab/caiman_data/model/cnn_model.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-16 15:54:49.066544: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20/20 [==============================] - 0s 5ms/step\n",
+      "GPU run not requested, disabling use of GPUs\n",
+      "USING MODEL (keras API): /home/howelab/caiman_data/model/cnn_model.json\n",
+      "18/18 [==============================] - 0s 16ms/step\n",
       "CNMF Finished, saving images...\n",
-      "Time taken:3.1333333333333333\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.60it/s]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.18s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.19s/it]\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.22s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.25s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.26s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.30s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.29s/it]\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.35s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.34s/it]\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.36s/it]\n",
-      "\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.41s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.43s/it]\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.44s/it]\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.52s/it]\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.56s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.47s/it]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.02s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.16s/it]\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.15s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.26s/it]\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.24s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.24s/it]\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.34s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.37s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.39s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.40s/it]\n",
-      "\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.57s/it]\n",
-      "  0%|          | 0/1 [00:00<?, ?it/s].60s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.77s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.77s/it]\n",
-      "\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.77s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.32s/it]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.22s/it]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.44it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.67it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.71it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.37it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.42it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.30it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.28it/s]\n",
-      "100%|██████████| 1/1 [00:01<00:00,  1.09s/it]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.42it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.04it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.09it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.18it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.00it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.05it/s]\n"
+      "Time taken:51.86666666666667\n",
+      "Trying to remove memmap file at location: /home/howelab/caiman_data/temp/ConcatenatedMovie_MC_memmap_d1_488_d2_701_d3_1_order_C_frames_68558.mmap.\n"
      ]
     }
    ],
@@ -162,8 +69,8 @@
     "# movieList = findMovs([r\"G:\\TdTG7_18_025\", r\"G:\\TdTG7_18_026\", r\"G:\\TdTG7_18_027\"], 'mc_reg.tif') #-> This will return the list in the proper format, don't worry about\n",
     "#formatting into a list inside a list\n",
     "\n",
-    "movieList = [\"/home/howelab/Desktop/testData/test071624/ConcatenatedMovie_MC_CROP.tif\"]\n",
     "\n",
+    "movieList = [\"/mnt/lily_shared/tdt_011/250201/2w_rec001/ConcatenatedMovie_MC.tif\"]\n",
     "\n",
     "#Note that the internal caiman functions wants a list for each movie that you want to run. Therefore when you assemble your list make sure they are lists INSIDE of lists.\n",
     "#If you need to do this (not using the findMovs function) below is an example of how to do that in python.\n",
@@ -182,7 +89,28 @@
     "\n",
     "    #There are optional inputs here if you do not want to save out images of what your components look like, and if you want to save out both your bad good and bad components.\n",
     "    # caimanResult = runCaimanPipeline(fnames, paramDict, selectComponents = False, saveImages = False) -> by default select components is on, and save images is on. This is how you change them\n",
-    "    caimanResult = runCaimanPipeline(fnames, paramDict)"
+    "    caimanResult = runCaimanPipeline(fnames, paramDict, saveImages=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dview' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdview\u001b[49m\u001b[38;5;241m.\u001b[39mterminate\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dview' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dview.terminate"
    ]
   },
   {
@@ -247,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4,
   "vscode": {
