--- a/Caiman_Code_main/runCaimanMultiReg.ipynb
+++ b/Caiman_Code_main/runCaimanMultiReg.ipynb
@@ -47,6 +47,10 @@
     "from os import path\n",
     "def get_h5_and_movie(startDirs,caiman_pat = 'ConcatenatedMovie_MC_caimanEval_Python.hdf5',\n",
     "                     movie_pat = 'ConcatenatedMovie_MC.tif'):\n",
+    "    \"\"\"This should be a helper function to trace down the concatenated neural video (tif) and \n",
+    "    there corresponding caiman Evaluation result, assuming they branch down the same node.\n",
+    "    Return is two lists of fullpaths to either the movie tif or the caikman hdf5 file. If a file\n",
+    "    cannot be find the fullpath will be replaced with an empty string\"\"\"\n",
     "    cm_files = []\n",
     "    movie_files = []\n",
     "    for startDir in startDirs:\n",
@@ -94,11 +98,20 @@
     "sess_movies = []\n",
     "sess_folders = []\n",
     "sess_root = []\n",
+    "# we go through all the files (assuming some structure with the file tree here)\n",
+    "# until we reach 1 level above the recording dirs (we should be at date dir: yymmdd)\n",
     "for root,dirnames,filenames in os.walk(startDir):\n",
+    "    # find gui and track recordings using the patterns given\n",
     "    gui_dirs = [os.path.join(root,d) for d in dirnames if d.startswith(pat_gui)]\n",
     "    nrgui_dirs = [os.path.join(root,d) for d in dirnames if d.startswith(pat_gui2)]\n",
     "    track_dirs =[os.path.join(root,d) for d in dirnames if d.startswith(pat_track)]\n",
+    "    # we only really want to preceed if track session and gui session all exist.\n",
     "    if gui_dirs and track_dirs:\n",
+    "        # here we are adding gui and no reward gui session after track so that we insure\n",
+    "        # the first item in the list for each session is track and the 2nd will be normal \n",
+    "        # gui, this should help maitain the result of this script compatible with the default\n",
+    "        # of what we had in the past (considering only two recordings). Here we let loose of the\n",
+    "        # number of recording to run this processing for simplicity\n",
     "        all_dirs = track_dirs + gui_dirs + nrgui_dirs\n",
     "        cm_files,movie_files = get_h5_and_movie(all_dirs)\n",
     "        sess_cms.append(cm_files)\n",
@@ -109,38 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/mnt/lily_shared/a2a_260/250408/gui_rec001/caimanOuputs_2025_4_14_11_42/ConcatenatedMovie_MC_caimanEval_Python.hdf5']\n",
-      "['', '/mnt/lily_shared/a2a_260/250408/gui_rec001/ConcatenatedMovie_MC.tif']\n",
-      "['', '']\n",
-      "['', '']\n",
-      "['', '']\n",
-      "['', '']\n",
-      "['/mnt/lily_shared/tdt_011/250127/1w_rec001/caimanOuputs_2025_3_31_15_0/ConcatenatedMovie_MC_caimanEval_Python.hdf5', '/mnt/lily_shared/tdt_011/250127/gui_rec003/caimanOuputs_2025_3_31_15_12/ConcatenatedMovie_MC_caimanEval_Python.hdf5', '']\n",
-      "['/mnt/lily_shared/tdt_011/250127/1w_rec001/ConcatenatedMovie_MC.tif', '/mnt/lily_shared/tdt_011/250127/gui_rec003/ConcatenatedMovie_MC.tif', '']\n",
-      "['', '', '', '']\n",
-      "['', '', '', '']\n",
-      "['', '/mnt/lily_shared/tdt_284/250415/gui_rec001/caimanOuputs_2025_5_19_20_57/ConcatenatedMovie_MC_caimanEval_Python.hdf5']\n",
-      "['', '/mnt/lily_shared/tdt_284/250415/gui_rec001/ConcatenatedMovie_MC.tif']\n"
+      "We skipped a session\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The local backend is an alias for the multiprocessing backend, and the alias may be removed in some future version of Caiman\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "The local backend is an alias for the multiprocessing backend, and the alias may be removed in some future version of Caiman\n",
       "The local backend is an alias for the multiprocessing backend, and the alias may be removed in some future version of Caiman\n"
      ]
     },
@@ -148,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing data for /mnt/lily_shared/tdt_210/250330/gui_rec001/ConcatenatedMovie_MC.tif\n"
+      "Preparing data for /mnt/lily_shared/a2a_260/250410/1w_rec001/ConcatenatedMovie_MC.tif\n"
      ]
     },
     {
@@ -158,14 +154,6 @@
       "<TiffTag.fromfile> raised TiffFileError('<tifffile.TiffTag 254 @10> invalid value offset 0')\n",
       "Your tif file is saved a single pagefile. Performance will be affected\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Memory map, mem-map file saved at: /home/howelab/caiman_data/temp/ConcatenatedMovie_MCmmapFile_d1_505_d2_712_d3_1_order_C_frames_26152.mmap\n",
-      "Calculating local correlation...\n"
-     ]
     }
    ],
    "source": [
@@ -173,27 +161,17 @@
     "from caimanMutiRegFunction import runMutiReg\n",
     "save_folder = '/mnt/lily_processed_data/multi_sess_reg_24to25'\n",
     "\n",
-    "# main loop\n",
-    "for f, sess in enumerate(sess_root):\n",
+    "# main loop, let's test with first session in the list.\n",
+    "for f, sess in enumerate(sess_root[:]):\n",
     "    mouseInfo = '_'.join(sess.split('/')[-2:] + ['caiman_multiReg.mat'])\n",
     "    if (all(sess_cms[f]) and all(sess_movies[f])):\n",
-    "        pass # The number of caiman eval files and number of movies matched, we can do multi-session register\n",
-    "        # multiReg = runMutiReg(sess_cms[f],sess_movies[f],mat_savefolder = save_folder,\n",
-    "        #                       mat_savename = mouseInfo)\n",
+    "        # The number of caiman eval files and number of movies matched, we can do multi-session register\n",
+    "        multiReg = runMutiReg(sess_cms[f],sess_movies[f],mat_savefolder = save_folder,\n",
+    "                              mat_savename = mouseInfo)\n",
     "    else:\n",
     "        # some file are missing, we don't want to run multi-session register on this session\n",
-    "        print(sess_cms[f])\n",
-    "        print(sess_movies[f])\n",
-    "\n",
-    "\n",
-    "# caiman eval file from the past\n",
-    "cm_fileList = ['/mnt/lily_shared/tdt_210/250330/gui_rec001/caimanOuputs_2025_3_31_19_47/ConcatenatedMovie_MC_caimanEval_Python.hdf5',\n",
-    "            '/mnt/lily_shared/tdt_210/250330/1w_rec002/caimanOuputs_2025_3_31_19_30/ConcatenatedMovie_MC_caimanEval_Python.hdf5']\n",
-    "# movie files\n",
-    "movie_list = ['/mnt/lily_shared/tdt_210/250330/gui_rec001/ConcatenatedMovie_MC.tif',\n",
-    "            '/mnt/lily_shared/tdt_210/250330/1w_rec002/ConcatenatedMovie_MC.tif']\n",
-    "\n",
-    "multiReg = runMutiReg(cm_fileList,movie_list)"
+    "        print('We skipped a session')\n",
+    "\n"
    ]
   },
   {
